update backend URL and fix CORS